rust_writer_proc/tests/ui/finder_fails_if_implementor_isnt_debug.stderr
error[E0277]: `A` doesn't implement `Debug`
  --> tests/ui/finder_fails_if_implementor_isnt_debug.rs:15:1
   |
15 | #[finder(rust_writer::ast::implementors::ItemToTrait<'a>, local = A)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `A` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `A`
   = note: add `#[derive(Debug)]` to `A` or manually `impl Debug for A`
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `A` with `#[derive(Debug)]`
   |
9  + #[derive(Debug)]
10 | struct A {
   |
